@@ -131,6 +131,23 @@ my $DEBUG = defined($ENV{'FAUXDACIOUS_DEBUG'}) ? $ENV{'FAUXDACIOUS_DEBUG'} : 0;
 #BEGIN USER-DEFINED PATTERN-MATCHING CODE:
 
 	if ($ARGV[0] !~ /\.(?:mp3|mpv|m3u|m3u8|webm|pls|mov|mp[4acdp]|m4a|avi|flac|flv|og[agmvx]|wav|rtmp|3gp|a[ac]3|ape|dts|tta|mk[av])$/i) {  #ONLY FETCH STREAMS FOR URLS THAT DON'T ALREADY HAVE VALID EXTENSION!
+		#SPECIAL HANDLING FOR rcast.net STREAMS (TOO SIMPLE TO NEED STREAMFINDER):
+		if (($newPlaylistURL = $ARGV[0]) =~ s#https\:\/\/www\.rcast\.net\/dir\/(\d+)\/?(.*)#https\:\/\/stream\.rcast\.net\/$1#) {
+			$title = $2  if ($2);
+			if ($title) {
+				$title =~ s#\/$##;
+				my @titleparts = split(/\-/, $title);
+				for (my $i=0;$i<=$#titleparts;$i++) {
+					$titleparts[$i] = "\u$titleparts[$i]\E";
+				}
+				$title = join(' ', @titleparts);
+			} else {
+				$title = $1;
+			}
+			$comment = 'Album=' . $ARGV[0] . "\n";
+			goto GOTIT;
+		}
+
 		$client = new StreamFinder($ARGV[0], -debug => $DEBUG,
 				-log => '/tmp/FauxdaciousUrlHelper.log',
 				-logfmt => '[time] "[title]" - [site]: [url] ([total])'
@@ -252,6 +269,8 @@ my $DEBUG = defined($ENV{'FAUXDACIOUS_DEBUG'}) ? $ENV{'FAUXDACIOUS_DEBUG'} : 0;
 			last;
 		}
 	}
+
+GOTIT:
 	$precedence = 'DEFAULT'  unless ($precedence =~ /^(?:OVERRIDE|ONLY|NONE)$/);
     &writeTagData($client, $precedence, $comment, $downloadit);
 
@@ -290,12 +309,12 @@ sub writeTagData {
 	# WE THEREFORE WANT Fauxdacious TO DELETE THE TAGS AND COVER ART FILES WHEN PLAYLIST CLEARED (fauxdacious -D)!
 	# THE LIST IN THE REGEX BELOW ARE THE ONES TO *NOT* DELETE ART IMAGES FOR (ie. STREAMING STATIONS)!:
 	my $tagfid = (!$downloadit && $client && $client->getType()
-			=~ /^(?:IHeartRadio|RadioNet|Tunein)$/)
+			=~ /^(?:IHeartRadio|RadioNet|Tunein|InternetRadio|OnlineRadiobox)$/)  #THESE SITES HAVE STATIONS:
 			? 'user_tag_data' : 'tmp_tag_data';
 	#WORKAROUND FOR IHEART & TUNEIN PODCASTS:
-	if ($tagfid =~ /^user/) {
+	if ($client && $tagfid =~ /^user/) {
 		my $mediasource = $client->getType();
-		$tagfid = 'tmp_tag_data'  if ($ARGV[0] =~ m#\/podcasts?\/#);
+		$tagfid = 'tmp_tag_data'  if ($ARGV[0] =~ m#\/podcasts?\/#);  #CONSIDER ANY PODCASTS TO BE ONE-OFFS:
 	}
 	if (open TAGDATA, "<${configPath}/$tagfid") {
 		my $omit = 0;
